fix: backport of job scheduling related changes